feat: いったん動くようになった

--- a/options.html
+++ b/options.html
@@ -9,6 +9,23 @@
     <div>
       <p>Choose a different background color!</p>
     </div>
+
+    <div>
+      <span>row</span>
+      <br />
+      <span id="rowSelectorInput"></span>
+    </div>
+    <div>
+      <span>columns</span>
+      <br />
+      <span id="columnSelectorsInput"></span>
+    </div>
+    <button id="addColumnSelector">+</button>
+    <div></div>
+    <button id="saveSelector">Save</button>
+    <button id="clearSelector">Clear</button>
+
+
   </body>
   <script src="options.js"></script>
 </html>
