refactor: チュートリアル部分の削除

--- a/options.html
+++ b/options.html
@@ -4,10 +4,8 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <div id="buttonDiv">
-    </div>
     <div>
-      <p>Choose a different background color!</p>
+      <p>Please Input Row Selector And Column Selector(CSS Selector)</p>
     </div>
 
     <div>
