wip: option複数設定可能にした

--- a/options.html
+++ b/options.html
@@ -8,22 +8,9 @@
       <p>Please Input Row Selector And Column Selector(CSS Selector)</p>
     </div>
 
-    <div>
-      <span>row</span>
-      <br />
-      <span id="rowSelectorInput"></span>
+    <div id="optionsList">
     </div>
-    <div>
-      <span>columns</span>
-      <br />
-      <span id="columnSelectorsInput"></span>
-    </div>
-    <button id="addColumnSelector">+</button>
-    <div></div>
     <button id="saveSelector">Save</button>
-    <button id="clearSelector">Clear</button>
-
-
   </body>
   <script src="options.js"></script>
 </html>
