--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <button id="downloadCsv"></button>
+    <div id="dlButtons">
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
