feat: display raw configuration text

--- a/options.html
+++ b/options.html
@@ -24,6 +24,11 @@
     <div id="optionsList">
     </div>
     <button id="saveSelector">Save</button>
+
+    <hr />
+    <div>Raw Configuration</div>
+    <div id="raw" class="code">
+    </div>
   </body>
   <script src="options.js"></script>
 </html>
