feat: ヘッダー項目を追加

--- a/options.html
+++ b/options.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
     <div>
-      <p>Please Input Row Selector And Column Selector(CSS Selector)</p>
+      <p>設定を削除したい場合、'key'の値を空にしてSaveしてください</p>
+      <p>'row'には対象の行を指定するセレクターを記入してください</p>
+      <p>'column'にはrowの要素から見た対象の列を指定するセレクターを記入してください(複数記述可)</p>
     </div>
 
     <hr />
