chore: change style

--- a/options.html
+++ b/options.html
@@ -28,7 +28,7 @@ settings: [
 
     <div id="optionsList">
     </div>
-    <button id="saveSelector">Save</button>
+    <button class="save" id="saveSelector">Save</button>
 
     <hr />
     <div>Raw Configuration</div>
