feat: import json

--- a/options.html
+++ b/options.html
@@ -34,6 +34,7 @@ settings: [
     <div>Raw Configuration</div>
     <div id="raw" class="code">
     </div>
+    <button class="save" id="importConfig">Import</button>
   </body>
   <script src="options.js"></script>
 </html>
